Add using player model only in related player service
