# models/player.go
@@ -18,9 +18,9 @@ type PlayerDTO struct {
 	Name   string `json:"name"`
 	Avatar string `json:"avatar"`
 
-	CreatedAt time.Time  `json:"created_at"`
-	UpdatedAt time.Time  `json:"updated_at"`
-	DeletedAt *time.Time `json:"deleted_at"`
+	CreatedAt time.Time `json:"created_at"`
+	UpdatedAt time.Time `json:"updated_at"`
+	//DeletedAt *time.Time `json:"deleted_at"`
 }
 
 func NewDTO(data Player) PlayerDTO {
@@ -30,6 +30,17 @@ func NewDTO(data Player) PlayerDTO {
 		Avatar:    data.Avatar,
 		CreatedAt: data.CreatedAt,
 		UpdatedAt: data.UpdatedAt,
-		DeletedAt: data.DeletedAt,
+		//DeletedAt: data.DeletedAt,
+	}
+}
+
+func NewModel(data *PlayerDTO) Player {
+	return Player{
+		//ID:        data.ID,
+		Name:   data.Name,
+		Avatar: data.Avatar,
+		//CreatedAt: data.CreatedAt,
+		//UpdatedAt: data.UpdatedAt,
+		//DeletedAt: data.DeletedAt,
 	}
 }
