# swagger.yaml
@@ -11,34 +11,6 @@ info:
     description: NFL application
     title: NFL application
     version: 0.0.0
-definitions:
-    player:
-        type: object
-        required:
-            - name
-        properties:
-            id:
-                type: integer
-                format: int64
-                readOnly: true
-            name:
-                type: string
-                minLength: 1
-            avatar:
-                type: string
-            created_at:
-                type: string
-            updated_at:
-                type: string
-            deleted_at:
-                type: string
-    error:
-        type: object
-        required:
-            - message
-        properties:
-            message:
-                type: string
 paths:
     /players:
         get:
@@ -59,9 +31,7 @@ paths:
                 200:
                     description: All players
                     schema:
-                        properties:
-                            data:
-                                $ref: "#/definitions/player"
+                        $ref: "#/definitions/array_of_players"
                         example:
                             data:
                                 -   id: 1
@@ -105,7 +75,7 @@ paths:
                                 avatar: ""
                                 created_at: "2018-12-14T11:44:32.779195Z"
                                 updated_at: "2018-12-17T12:59:44.153986Z"
-                                deleted_at: null
+                                deleted_at: "null"
                 default:
                     description: error
                     schema:
@@ -135,7 +105,7 @@ paths:
                                 avatar: ""
                                 created_at: "2018-12-14T11:44:32.779195Z"
                                 updated_at: "2018-12-17T12:59:44.153986Z"
-                                deleted_at: null
+                                deleted_at: "null"
                 default:
                     description: error
                     schema:
@@ -151,3 +121,38 @@ paths:
                     description: error
                     schema:
                         $ref: "#/definitions/error"
+definitions:
+    player:
+        type: object
+        required:
+            - name
+        properties:
+            id:
+                type: integer
+                format: int64
+                readOnly: true
+            name:
+                type: string
+                minLength: 1
+            avatar:
+                type: string
+            created_at:
+                type: string
+            updated_at:
+                type: string
+            deleted_at:
+                type: string
+    array_of_players:
+        type: object
+        properties:
+            data:
+                type: array
+                items:
+                    $ref: "#/definitions/player"
+    error:
+        type: object
+        required:
+            - message
+        properties:
+            message:
+                type: string
